syntax="proto3";
package comment_send;

service CommentSender{
	rpc SendComment (CommentList) returns (DbCommentResponse);
}

message CommentList{
	repeated Comment comment_vec = 1;
}

message Comment{
	int32 product_id = 1;
	string title = 2;
	string body = 3;
	int32 rate = 4;
}

message DbCommentResponse{
	bool status = 1;
}
