syntax = "proto3";
package product_send;

service ProductSender{
    rpc SendProduct (ProductList) returns (DBProductResponse);
}

message ProductList{
   repeated Product product_vec= 1;
}

message Product {
   int32 id  = 1;
   string title_fa = 2;
}

message DBProductResponse {
   bool status = 1;
}
